# TOKENICODE

./: .gitignore  DeepSeek_API_申请教程.md  README.md  README_zh.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  使用指南.txt
.github/workflows/: release.yml
docs/windows/: 安装指南.txt  常见问题.txt  签名说明.txt
editions/alpha/: tauri.alpha.conf.json
editions/beta/: tauri.beta.conf.json
editions/seven/: tauri.seven-dev.conf.json  tauri.seven.conf.json
scripts/: build-portable.sh  build-seven-local.sh
scripts/windows/: assemble-usb.sh  diagnostics.ps1  install-webview2-offline.cmd
src/: App.css  App.tsx
src-tauri/: Cargo.toml  NSIS-CUSTOM.md  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: NOVA-installer.nsi  installer_hooks.nsh  nova_path.nsh
src-tauri/src/: lib.rs  local_inference.rs  proxy.rs
src-tauri/src/commands/: cli_deploy.rs  mod.rs
src-tauri/tools/cleanup-helper/: build.bat  go.mod  main.go
src/__tests__/: spawnConfigHash.test.ts
src/components/chat/: ChatPanel.tsx  InputBar.tsx  MessageBubble.tsx  OllamaInstallButton.tsx
src/components/files/: FileExplorer.tsx  FilePreview.tsx
src/components/layout/: Sidebar.tsx
src/components/setup/: ApiUpgradePrompt.tsx  SetupWizard.tsx
src/components/shared/: MarkdownRenderer.tsx
src/hooks/: useAutoUpdateCheck.ts  useStreamProcessor.ts
src/lib/: edition.ts  i18n.ts  provider-presets.ts  sessionLifecycle.ts  tauri-bridge.ts
src/stores/: chatStore.ts  fileReveal.ts  fileStore.ts  groupStore.ts  providerStore.ts  settingsStore.ts
src/stream/: instance.ts
(+5 files in other folders)
