[package]
name = "tokenicode"
version = "1.0.0"
description = "NOVA - Claude Code Desktop GUI"
authors = ["NOVA"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "tokenicode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
notify = "7"
base64 = "0.22"
serde_yaml = "0.9"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
futures-util = "0.3"
rand = "0.8"
trash = "5"
flate2 = "1"
tar = "0.4"
zip = "2"
sha2 = "0.10"
tauri-plugin-mcp = "0.8.0-alpha.4"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
